Revision history for HTTP-Message

{{$NEXT}}

6.40      2022-10-12 15:45:52Z
    - Fixed two typos in the doc, originally reported by FatherC
      in RT#90716, ported over as GH#57. (GH#57) (Neil Bowers)

6.39      2022-10-08 13:48:26Z
    - Remove Travis config (GH#180) (Olaf Alders)
    - Added status_constant_name() which maps status code
      to the name of the corresponding constant. (GH#160) (Neil Bowers)
    - Updated the doc for status_message() to clarify that it
      returns "Not Found" and not "HTTP_NOT_FOUND". (GH#160) (Neil Bowers)

6.38      2022-10-06 21:48:18Z
    - Replace "base" with "parent" (GH#176) (James Raspass)
    - Replace "print" with "note" in tests (GH#178) (James Raspass)
    - Noted that OPTIONS supported was added in 6.1, to the doc
      for HTTP::Request::Common. Addresses GH#177. (GH#179) (Neil Bowers)

6.37      2022-06-14 14:08:55Z
    - Support for Brotli "br" encoding (GH#163) (trizen and Julien Fiegehenn)
    - Don't test Perl > 5.32 on Windows in GH Actions (GH#174) (Olaf Alders)

6.36      2022-01-05 14:39:42Z
    - Fix examples in HTTP::Request::Common synopsis: HTTP::Request::Common
      does not put headers in an arrayref, unlike HTTP::Request (GH#170) (Karen
      Etheridge)
    - Update to contributing information (GH#171) (Håkon Hægland)

6.35      2021-11-11 22:10:31Z
    - Clarify documentation for decoded_content (GH#166) (Eric Wastl)

6.34      2021-11-08 14:27:36Z
    - Catch case of empty name/value in header words split. (GH#168) (Galen Huntington)

6.33      2021-06-28 16:51:58Z
    - Allow `can` method to respond to delegated methods (GH#159) (nanto_vi,
      TOYAMA Nao)

6.32      2021-05-18 18:54:27Z
    - Use File::Spec for MSWin32 on Content-Disposition filename (GH#157)
      (tzccinct)

6.31      2021-05-11 18:07:37Z
    - Fix test writing to files (GH#156) (Michal Josef Špaček)

6.30      2021-05-10 14:55:55Z
    - Don't inherit from Exporter anymore (GH#155) (Max Maischein)