@@ -84,7 +84,6 @@ sub base
     my $self = shift;
     my $base = (
 	$self->header('Content-Base'),        # used to be HTTP/1.1
-	$self->header('Content-Location'),    # HTTP/1.1
 	$self->header('Base'),                # HTTP/1.0
     )[0];
     if ($base && $base =~ /^$URI::scheme_re:/o) {
@@ -475,7 +474,7 @@ in HTML documents.
 
 =item 2.
 
-A "Content-Base:" or a "Content-Location:" header in the response.
+A "Content-Base:" header in the response.
 
 For backwards compatibility with older HTTP implementations we will
 also look for the "Base:" header.
@@ -489,6 +488,13 @@ received some redirect responses first.
 =back
 
 If none of these sources provide an absolute URI, undef is returned.
+
+B<Note>: previous versions of HTTP::Response would also consider
+a "Content-Location:" header,
+as L<RFC 2616|https://www.rfc-editor.org/rfc/rfc2616> said it should be.
+But this was never widely implemented by browsers,
+and now L<RFC 7231|https://www.rfc-editor.org/rfc/rfc7231>
+says it should no longer be considered.
 
 When the LWP protocol modules produce the HTTP::Response object, then any base
 URI embedded in the document (step 1) will already have initialized the
